[project]
name = "liulab-runtime"
description = "Centralized package & environment manager for Liu Lab data analysis, powered by pixi."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Liu Lab" }]
keywords = ["bioinformatics", "pixi", "conda", "environment", "liulab"]
# Date-based (CalVer) versioning: YYYY.M.D
version = "2026.7.3"

[project.urls]
Homepage = "https://github.com/liuhlab/liulab-runtime"
Issues = "https://github.com/liuhlab/liulab-runtime/issues"
Changelog = "https://github.com/liuhlab/liulab-runtime/blob/main/CHANGELOG.md"

# ======================================================================
#  pixi — environment & package management
#
#  Concepts (see docs/background.md for the friendly version):
#    * dependencies      -> the "default feature", included in EVERY env
#    * feature.<name>    -> a named bundle of extra packages
#    * environments      -> a recipe combining one or more features
# ======================================================================

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
# Direct `pixi install` targets modern OSes only. Old Linux (e.g. CentOS 7,
# glibc 2.17) is intentionally NOT supported on bare metal — run the
# container there instead, which carries its own modern glibc and only
# needs a compatible kernel. See docs/containers.md.
#
# `linux-64-cuda` is a named variant of `linux-64` that advertises an NVIDIA
# GPU (the `__cuda` virtual package) to the solver. ONLY the `torch-gpu`
# feature targets it, so it exists purely to let the `ml-gpu` env resolve
# CUDA-enabled builds; every other env keeps using the plain platforms.
platforms = [
    "osx-arm64",
    "osx-64",
    "linux-64",
    { name = "linux-64-cuda", platform = "linux-64", cuda = "12" },
]

# ---- Base layer: present in every environment ------------------------
# python + ipykernel mean ANY environment here can back a Jupyter kernel.
# htslib + pigz are near-universal in our pipelines, so they live here too.
[tool.pixi.dependencies]
python = "3.13.*"
ipykernel = "*"
htslib = "*"
pigz = "*"
bedtools = "*"
samtools = "*"
sra-tools = "*"
jupyterlab = "*"
socksio = "*"           # lets jupyterlab's httpx talk to a SOCKS proxy
ipywidgets = "*"

# ---- Default environment: everyday data analysis ---------------------
[tool.pixi.feature.analysis.dependencies]
seaborn = "*"

# ---- lab: the Liu Lab's own packages + the Python stack they need -----
# Added to every environment EXCEPT `docs` (which only builds the site and
# never imports them). Their supporting libs stay conda-managed/pinned so
# every env resolves the same builds.
[tool.pixi.feature.lab.dependencies]
pandas = ">=2.1,<3"   # liulab-genome requires pandas <3
# Cap below 2.4: numpy >=2.4 builds with an x86-64-v2 baseline that won't
# import on older CPUs / emulated VMs (e.g. the QEMU i440FX analysis box).
numpy = ">=2.1,<2.4"
gffutils = "*"          # python dep of liulab-genome (genome.io.gtf)
# CLI tools liulab-genome shells out to.
ucsc-fatotwobit = "*"   # faToTwoBit
ucsc-twobitinfo = "*"   # twoBitInfo

# Installed straight from GitHub.
[tool.pixi.feature.lab.pypi-dependencies]
liulab-data = { git = "https://github.com/liuhlab/liulab-data.git" }
liulab-genome = { git = "https://github.com/liuhlab/liulab-genome.git" }

# ---- align-base: shared, aligner-agnostic read-processing toolkit ----
# Everything an alignment workflow needs regardless of which aligner you
# use: BAM handling, FASTQ (de)compression, and QC.
[tool.pixi.feature.align-base.dependencies]
sambamba = "*"
fastp = "*"     # fast all-in-one FASTQ preprocessing
fastqc = "*"
multiqc = "*"
repaq = "*"     # fast FASTQ compression

# ---- align-rna: RNA-seq aligners (builds on align-base) --------------
# STAR has no osx-arm64 build on bioconda, so this feature is limited to
# the platforms that do. (Apple Silicon users: run it under linux-64 in
# a container / on a cluster.)
[tool.pixi.feature.align-rna]
platforms = ["osx-64", "linux-64"]

[tool.pixi.feature.align-rna.dependencies]
star = "*"

# ---- align-dna: DNA-seq alignment (builds on align-base) -------------
# chromap is the main aligner (fast for ATAC/Hi-C/ChIP-seq reads).
[tool.pixi.feature.align-dna.dependencies]
chromap = "*"

# ---- single-cell: single-cell RNA-seq analysis ----------------------
# scanpy is the standard single-cell analysis toolkit (built on anndata).
[tool.pixi.feature.single-cell.dependencies]
scanpy = "*"
python-igraph = "*"
leidenalg = "*"

# ---- ml / torch-cpu / torch-gpu: PyTorch-based ML, CPU/MPS and CUDA --
# PyTorch comes from conda-forge (not the download.pytorch.org wheels) so it
# resolves against the same conda numpy/pandas the rest of the workspace pins.
# The build variant is the ONLY difference between accelerators, so it lives
# in two thin features — `torch-cpu` / `torch-gpu` — layered on a shared `ml`
# feature. Two environments combine them:
#   * `ml`      — CPU everywhere, plus Apple-GPU (MPS) on Apple Silicon
#   * `ml-gpu`  — NVIDIA CUDA on linux-64
# Keep them in SEPARATE solve groups (the default): the cpu vs cuda pytorch
# builds cannot co-resolve.
#
# `ml` holds the accelerator-agnostic ML stack shared by both envs. scvi-tools
# (single-cell deep learning) sits here: it's PyTorch-based and picks its
# accelerator at RUNTIME from whatever torch is installed — MPS in `ml`, CUDA
# in `ml-gpu` — so no per-env pip `[metal]`/`[cuda]` extras are needed; the
# conda torch build (below) already selects the backend. Add other downstream
# packages here too (e.g. lightning, transformers).
[tool.pixi.feature.ml.dependencies]
scikit-learn = "*"
scvi-tools = "*"

# CPU / Apple-GPU PyTorch. `pytorch-cpu` forces the non-CUDA build of `pytorch`.
# Resolves on every platform; on Apple Silicon that build ships the MPS GPU
# backend (`torch.backends.mps`), so the Mac GPU works with no extra package.
[tool.pixi.feature.torch-cpu.dependencies]
pytorch-cpu = "*"

# CUDA PyTorch — Linux + NVIDIA only. Restricted to the `linux-64-cuda`
# platform so it only resolves where `__cuda` is advertised; `pytorch-gpu`
# forces the cuda build.
#
# `cuda-version = "12.*"` targets CUDA 12 broadly rather than one minor. It
# resolves to conda-forge's newest CUDA 12 build (currently 12.9 + the latest
# PyTorch), and CUDA 12 *minor-version compatibility* means that runtime runs
# on any driver that supports CUDA >= 12.0 — including 12.6 HPC nodes. (Do NOT
# pin a lower minor like 12.6: conda-forge only builds the newest PyTorch
# against 12.9, so `12.6.*` would silently drag PyTorch back several releases
# for no compatibility gain.)
[tool.pixi.feature.torch-gpu]
platforms = ["linux-64-cuda"]

[tool.pixi.feature.torch-gpu.dependencies]
pytorch-gpu = "*"
cuda-version = "12.*"

# ---- Tooling features ------------------------------------------------
[tool.pixi.feature.dev.dependencies]
ruff = "*"
pre-commit = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs-material = "*"

# ---- Environments ----------------------------------------------------
# The `lab` feature (liulab-data/genome + their Python stack) is in every
# env except `docs`, which only builds the site.
[tool.pixi.environments]
default    = { features = ["analysis", "lab", "dev", "docs"], solve-group = "default" }
docs       = { features = ["docs"], solve-group = "default" }
align-rna  = { features = ["align-base", "align-rna", "lab"] }
align-dna  = { features = ["align-base", "align-dna", "lab"] }
# PyTorch envs, single-cell + scvi-tools included in both:
#   * `ml`     — CPU everywhere, plus Apple-GPU (MPS) on Apple Silicon
#   * `ml-gpu` — NVIDIA CUDA on linux-64
# No solve-group: the cpu/cuda pytorch builds must resolve independently.
ml         = { features = ["ml", "torch-cpu", "single-cell", "analysis", "lab"] }
ml-gpu     = { features = ["ml", "torch-gpu", "single-cell", "analysis", "lab"] }

# ---- Tasks -----------------------------------------------------------
[tool.pixi.tasks]
# Register the CURRENT environment as a Jupyter kernel (idempotent).
register-kernel = "python -m ipykernel install --user --name liulab-$PIXI_ENVIRONMENT_NAME --display-name \"Python (liulab $PIXI_ENVIRONMENT_NAME)\""
# Register every environment up front, without entering each one.
register-kernels = "bash scripts/register_all_kernels.sh"
# Show all environments and what's in them.
envs = "pixi workspace environment list"

[tool.pixi.feature.docs.tasks]
docs = "mkdocs serve"
docs-build = "mkdocs build --strict"

[tool.pixi.feature.analysis.tasks]
# Launch Jupyter Lab. Lives in the analysis feature (the default env) since
# that's the only env with jupyterlab; other envs are used as kernels.
lab = "jupyter lab"

[tool.pixi.feature.dev.tasks]
lint = "ruff check ."
fmt = "ruff format ."
fmt-check = "ruff format --check ."

# ======================================================================
#  ruff — light linting for the few helper scripts we keep
# ======================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]
