[project]
name = "liulab-runtime"
description = "Centralized package & environment manager for Liu Lab data analysis, powered by pixi."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Liu Lab" }]
keywords = ["bioinformatics", "pixi", "conda", "environment", "liulab"]
# Date-based (CalVer) versioning: YYYY.M.D
version = "2026.7.19"

[project.urls]
Homepage = "https://github.com/liuhlab/liulab-runtime"
Issues = "https://github.com/liuhlab/liulab-runtime/issues"
Changelog = "https://github.com/liuhlab/liulab-runtime/blob/main/CHANGELOG.md"

# ======================================================================
#  pixi — environments & packages
#
#  Layering (see docs/background.md):
#    dependencies    -> base layer, included in EVERY environment
#    feature.<name>  -> a named bundle of extra packages
#    environments    -> a combination of features
# ======================================================================

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
# Modern OSes only. Old Linux (e.g. CentOS 7 / glibc 2.17) is not supported on
# bare metal — run the container there instead. See docs/containers.md.
#
# `linux-64-cuda` is a rich variant of `linux-64` that advertises `__cuda >= 12`.
# Only the `torch-gpu` feature targets it (so only `ml-gpu` resolves CUDA builds).
platforms = [
    "osx-arm64",
    "osx-64",
    "linux-64",
    { name = "linux-64-cuda", platform = "linux-64", cuda = "12" },
]

# ======================================================================
#  Base layer — every environment
# ======================================================================
# ipykernel + jupyterlab let any environment back a Jupyter kernel; htslib +
# pigz are near-universal in our pipelines.
[tool.pixi.dependencies]
python = "3.13.*"
ipykernel = "*"
jupyterlab = "*"
ipywidgets = "*"
jupyterlab_execute_time = "*"     # show per-cell execution time
jupyterlab_code_formatter = "*"   # format notebook cells (backend below)
ruff = "*"                        # formatter backend for code-formatter + lint
socksio = "*"           # SOCKS-proxy support for jupyterlab's httpx
htslib = "*"
pigz = "*"
bedtools = "*"
samtools = "*"
sra-tools = "*"

# ======================================================================
#  Shared feature — the Liu Lab packages
# ======================================================================
# In every environment except `docs`. Supporting libs are conda-pinned so
# every environment resolves the same builds.
[tool.pixi.feature.lab.dependencies]
pandas = ">=2.1,<3"     # liulab-genome needs pandas <3
numpy = ">=2.1,<2.4"    # numpy >=2.4 uses an x86-64-v2 baseline; breaks on old/emulated CPUs
seaborn = "*"
gffutils = "*"          # liulab-genome (genome.io.gtf)
ucsc-fatotwobit = "*"   # faToTwoBit, shelled out to by liulab-genome
ucsc-twobitinfo = "*"   # twoBitInfo, shelled out to by liulab-genome

[tool.pixi.feature.lab.pypi-dependencies]
liulab-data = { git = "https://github.com/liuhlab/liulab-data.git" }
liulab-genome = { git = "https://github.com/liuhlab/liulab-genome.git" }
seqforge = { git = "https://github.com/liuhlab/seqforge.git" }

# ======================================================================
#  Alignment features — genomic read alignment (CPU only)
# ======================================================================
# align-base: aligner-agnostic read processing — BAM handling, FASTQ
# (de)compression, QC. The aligner features layer on top of it.
[tool.pixi.feature.align-base.dependencies]
sambamba = "*"
fastp = "*"
fastqc = "*"
multiqc = "*"
repaq = "*"             # fast FASTQ compression
snakemake = "*"         # workflow management
# RNA-seq. STAR has no osx-arm64 build on bioconda (run under linux-64 there).
[tool.pixi.feature.align-rna]
platforms = ["osx-64", "linux-64"]

[tool.pixi.feature.align-rna.dependencies]
star = "*"

# DNA-seq. chromap is fast for ATAC / Hi-C / ChIP-seq reads.
[tool.pixi.feature.align-dna.dependencies]
chromap = "*"

# ======================================================================
#  Analysis features — the `ml` / `ml-gpu` environments
# ======================================================================
# The ML / analysis stack. scvi-tools picks its accelerator (CPU / Apple MPS /
# CUDA) at runtime from whichever PyTorch build the environment installs.
[tool.pixi.feature.ml.dependencies]
scikit-learn = "*"
scvi-tools = "*"

# Single-cell RNA-seq toolkit: a Python stack (scanpy on anndata) plus an R
# stack (Seurat & friends) reached from Python through rpy2. Channels are
# pinned per package.
[tool.pixi.feature.single-cell.dependencies]
# Python
scanpy = { version = "==1.12.2", channel = "conda-forge" }  # single-cell analysis in Python
anndata = { version = "<=0.12.10", channel = "conda-forge" }  # cap: lamindb needs anndata <=0.12.10
python-igraph = { version = "*", channel = "conda-forge" }
leidenalg = { version = "*", channel = "conda-forge" }
pertpy = { version = "==1.1.1", channel = "conda-forge" }  # perturbation analysis
decoupler-py = { version = "==2.1.6", channel = "conda-forge" }  # pathway / TF activity inference
pydeseq2 = { version = "==0.5.4", channel = "bioconda" }  # differential expression (DESeq2 in Python)
celltypist = { version = "==1.7.0", channel = "bioconda" }  # automated cell-type annotation. cap: 1.7.1 needs anndata >0.12.10 (conflicts with lamindb's <=0.12.10)
scipy = { version = "<1.17", channel = "conda-forge" }  # cap: lamindb requires scipy <1.17
fsspec = { version = "<=2026.1.0", channel = "conda-forge" }  # cap: lamindb (s3fs) needs fsspec <=2026.1.0
# R (called from Python via rpy2)
r-base = { version = "4.5.*", channel = "conda-forge" }  # R 4.5 / Bioconductor 3.22 stack
rpy2 = { version = "==3.6.7", channel = "conda-forge" }  # Python <-> R bridge
r-seurat = { version = "==5.5.1", channel = "conda-forge" }  # single-cell analysis in R
r-soupx = { version = "==1.6.2", channel = "conda-forge" }  # ambient-RNA ("soup") removal
bioconductor-scdblfinder = { version = "==1.24.0", channel = "bioconda" }  # doublet detection
bioconductor-scran = { version = "==1.38.0", channel = "bioconda" }  # normalization & variance modeling
bioconductor-scry = { version = "==1.22.0", channel = "bioconda" }  # feature selection (deviance / GLM-PCA)

# Not on conda at this version — pull from PyPI.
[tool.pixi.feature.single-cell.pypi-dependencies]
lamindb = "==2.5.1"  # data lineage / provenance for the analysis

# PyTorch build variant — the ONLY difference between `ml` and `ml-gpu`.
# CPU build; on Apple Silicon it ships the Metal (MPS) GPU backend.
[tool.pixi.feature.torch-cpu.dependencies]
pytorch-cpu = "*"

# CUDA build (Linux + NVIDIA only). Targets the `linux-64-cuda` rich platform
# (declared in workspace.platforms) so `__cuda >= 12` is advertised only to the
# `ml-gpu` env; `pytorch-gpu` forces the cuda build.
#
# `cuda-version = "12.*"` tracks conda-forge's newest CUDA 12 build (12.9 +
# latest PyTorch). CUDA 12 minor-version compatibility runs it on any >=12.0
# driver, e.g. 12.6 nodes. Do NOT pin 12.6.* — it drags PyTorch back releases.
[tool.pixi.feature.torch-gpu]
platforms = ["linux-64-cuda"]

[tool.pixi.feature.torch-gpu.dependencies]
pytorch-gpu = "*"
cuda-version = "12.*"

# ======================================================================
#  Tooling features
# ======================================================================
[tool.pixi.feature.dev.dependencies]
ruff = "*"
pre-commit = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs-material = "*"

# ======================================================================
#  Environments
# ======================================================================
#   default / docs   maintenance (repo upkeep, docs site)
#   align-rna/-dna   genomic alignment, CPU only
#   ml / ml-gpu      analysis; ml-gpu adds NVIDIA CUDA
# `ml` / `ml-gpu` stay out of a solve group so their CPU vs CUDA PyTorch builds
# resolve independently.
[tool.pixi.environments]
default   = { features = ["lab", "dev", "docs"], solve-group = "default" }
docs      = { features = ["docs"], solve-group = "default" }
align-rna = { features = ["align-base", "align-rna", "lab"] }
align-dna = { features = ["align-base", "align-dna", "lab"] }
ml        = { features = ["ml", "single-cell", "torch-cpu", "lab"] }
ml-gpu    = { features = ["ml", "single-cell", "torch-gpu", "lab"] }

# ======================================================================
#  Tasks
# ======================================================================
[tool.pixi.tasks]
# Register the current / every environment as a Jupyter kernel (idempotent).
register-kernel = "python -m ipykernel install --user --name liulab-$PIXI_ENVIRONMENT_NAME --display-name \"Python (liulab $PIXI_ENVIRONMENT_NAME)\""
register-kernels = "bash scripts/register_all_kernels.sh"
envs = "pixi workspace environment list"   # list environments and their contents
lab = "jupyter lab --notebook-dir=$HOME"   # start in the user's home, not the runtime repo
# Batch git across the lab stack (this repo + seqforge/liulab-data/liulab-genome as sibling
# checkouts). `pixi run stack status`, `pixi run stack sync`, etc. See scripts/stack --help.
stack = "bash scripts/stack"

[tool.pixi.feature.docs.tasks]
docs = "mkdocs serve"
docs-build = "mkdocs build --strict"

[tool.pixi.feature.dev.tasks]
lint = "ruff check ."
fmt = "ruff format ."
fmt-check = "ruff format --check ."

# ======================================================================
#  ruff — light linting for the few helper scripts we keep
# ======================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

# ======================================================================
#  liulab-runtime — docker settings
# ======================================================================
# ENVS_FOR_DOCKER: the environments published as standalone container images,
# one image tag per env (`ghcr.io/liuhlab/liulab-runtime:<env>`).
[tool.liulab-runtime]
docker-environments = ["align-rna", "align-dna", "ml", "ml-gpu"]
